--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,21 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    margin: 0;
+    padding: 0;
+  }
+
+  html, body {
+    height: 100%;
+    margin: 0;
+  }
+
+.container {
+    display: flex;
+    width: 90%;
+}
+.side-bar-col{
+    flex: 25%;
+}
+.content{
+    width: 100%;
+
+}
