connect tickets with .net core api

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
                 <form class="ticket-sell-form" #ticketdetail="ngForm" (ngSubmit)="ticketDetailsAdd(ticketdetail.value)">
                     <div class="ticket-sell-form-row">
                         <label class="ticket-sell-form-row-label">Category</label><br>
-                        <select class="ticket-sell-form-row-input" type="text" name="contactNumber" ngModel>
+                        <select class="ticket-sell-form-row-input" type="text" name="category" ngModel>
                             <option value="0">Bus</option>
                             <option value="1">Train</option>
                             <option value="2">Theatre</option>
@@ -33,7 +33,7 @@
                     </div>
                     <div class="ticket-sell-form-row">
                         <label class="ticket-sell-form-row-label">Descriptions</label><br>
-                        <input class="ticket-sell-form-row-input" type="text" name="descriptions" ngModel>
+                        <input class="ticket-sell-form-row-input" type="text" name="description" ngModel>
                     </div>
                     <div class="ticket-sell-form-row">
                         <button class="ticket-sell-form-button" type="submit">Add</button>
@@ -41,7 +41,7 @@
                 </form>
             </div>
             <div class="right-col">
-                <img class="ticket-sell-img" src="../../assets/Images/ticket.png">
+                <img class="ticket-sell-img" src="../../assets/Images/—Pngtree—cartoon hand drawn smart appointment_5437841.png">
             </div>
         </div>
     </div>
