buy-tickets added

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -5,10 +5,10 @@
     <div class="side-bar-row" routerLinkActive="active">
         <p class="side-bar-text">User Info</p>
     </div>
-    <div class="side-bar-row" routerLinkActive="active">
+    <div class="side-bar-row" routerLink="/sell-tickets" routerLinkActive="active">
         <p class="side-bar-text">Sell Tickets</p>
     </div>
-    <div class="side-bar-row" routerLinkActive="active">
+    <div class="side-bar-row" routerLink="/buy-tickets" routerLinkActive="active">
         <p class="side-bar-text">Buy Tickets</p>
     </div>
     <div class="side-bar-row" routerLink="/settings" routerLinkActive="active">
