--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -4,10 +4,26 @@
     background-color: #393E46;
     padding: 0.5em;
     position: fixed;
+    display: flex;
 }
 
 .header-name{
     color: #F7F7F7;
     text-align: center;
     font-size: 20px;
+    flex: 90%;
+}
+
+.login{
+    color: #F7F7F7;
+    text-align: left;
+    font-size: 16px;
+    flex: 5%;
+}
+
+.register{
+    color: #F7F7F7;
+    text-align: left;
+    font-size: 16px;
+    flex: 8%;
 }
