--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,3 +1,6 @@
 <div class="header">
+    <div class=""></div>
     <p class="header-name">Q Find System</p>
+    <p class="login" (click)="goLogin()">Login</p>
+    <p class="register" (click)="goRegister()">Register</p>
 </div>
