--- a/src/app/buy-tickets/buy-tickets.component.html
+++ b/src/app/buy-tickets/buy-tickets.component.html
@@ -32,6 +32,9 @@
                 </div>
             </ul>
         </div>
+
+    </div>
+    <div class="right-bar-col">
         <div class="filter">
             <p class="filter-title">Filter Options</p>
             <div class="filter-option">
