--- a/src/app/buy-tickets/buy-tickets.component.css
+++ b/src/app/buy-tickets/buy-tickets.component.css
@@ -2,11 +2,11 @@
     display: flex;
 }
 .home {
-    margin-top: 15vh;
     border-radius: 5px;
-    width: 70%;
-    margin-left: 10%;
+    width: 80%;
+    margin-left: auto;
     margin-right: auto;
+    /* display: block; */
     box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
 
@@ -31,11 +31,11 @@ li {
 }
 
 .table-header {
-    background-color: #393E46;
+    background-color: var(--color1);
     font-size: 14px;
     text-transform: uppercase;
     letter-spacing: 0.03em;
-    color: #F7F7F7;
+    color: var(--font-color1);
 }
 
 .table-row {
@@ -61,10 +61,9 @@ li {
 
 
 .filter{
-    margin-top: 15vh;
     border-radius: 5px;
-    margin-left: 5%;
-    width: 30%;
+    /* margin-left: 5%; */
+    width: 80%;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
     height: fit-content;
     padding: 1em;
@@ -76,10 +75,10 @@ li {
 .filter-button{
     margin-top: 1vh;
     border: none;
-    background-color: #6D9886;
+    background-color: var(--color2);
     padding: 0.5em;
     border-radius: 3px;
-    color: #F7F7F7;
+    color: var(--font-color1);
 }
 
 @media all and (max-width: 767px) {
