--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -1,28 +1,29 @@
 .header{
     width: fill;
     height: 30px;
-    background-color: #393E46;
+    background-color: var(--color1);
     padding: 0.5em;
-    position: fixed;
+    /* position: fixed; */
     display: flex;
 }
 
 .header-name{
-    color: #F7F7F7;
+    font-family: var(--font);
+    color: var(--font-color1);
     text-align: center;
     font-size: 20px;
     flex: 90%;
 }
 
 .login{
-    color: #F7F7F7;
+    color: var(--font-color1);
     text-align: left;
     font-size: 16px;
     flex: 5%;
 }
 
 .register{
-    color: #F7F7F7;
+    color: var(--font-color1);
     text-align: left;
     font-size: 16px;
     flex: 8%;
