--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
     <div class="side-bar-row" routerLink="/home" routerLinkActive="active" [routerLinkActiveOptions]={exact:true}>
         <p class="side-bar-text">Home</p>
     </div>
-    <div class="side-bar-row" routerLinkActive="active">
+    <div class="side-bar-row" routerLink="/userinfo" routerLinkActive="active">
         <p class="side-bar-text">User Info</p>
     </div>
     <div class="side-bar-row" routerLink="/sell-tickets" routerLinkActive="active">
