--- a/src/app/sell-tickets/sell-tickets.component.html
+++ b/src/app/sell-tickets/sell-tickets.component.html
@@ -39,7 +39,7 @@
             </div>
             <div class="right-col">
                 <img class="ticket-sell-img"
-                    src="../../assets/Images/—Pngtree—cartoon hand drawn smart appointment_5437841.png">
+                    src="https://live.staticflickr.com/65535/53068770659_10820e7ab8_n.jpg">
             </div>
         </div>
         <div class="sell-ticket">
@@ -53,13 +53,13 @@
                 <li class="table-row" *ngFor="let ticket of tickets">
                     <div class="col col-1" data-label="Job Id">
                         <div *ngIf="ticket.category == 0">
-                            <img class="category-icon" src="../../assets/Images/bus-side-view.png">
+                            <img class="category-icon" src="https://live.staticflickr.com/65535/53068770634_89d47cae0e_n.jpg">
                         </div>
                         <div *ngIf="ticket.category == 1">
-                            <img class="category-icon" src="../../assets/Images/train.png">
+                            <img class="category-icon" src="https://live.staticflickr.com/65535/53068972865_c4c4b3a0b8_n.jpg">
                         </div>
                         <div *ngIf="ticket.category == 2">
-                            <img class="category-icon" src="../../assets/Images/theatre.png">
+                            <img class="category-icon" src="https://live.staticflickr.com/65535/53068770624_61f94a7386_n.jpg">
                         </div>
                     </div>
                     <div class="col col-2" data-label="Customer Name">{{ticket.seatsCount}}</div>
